# t-botti

./: .gitignore  Cargo.toml  config.yml.example
src/: blitzortung.rs  botaction.rs  epic.rs  fmi.rs  gdq.rs  h33h3.rs  http_client.rs  ircloop.rs  main.rs  message_handler.rs  openweathermap.rs  roll.rs  rss.rs  sahko.rs  timer.rs  ts3.rs  tvmaze.rs  urltitle.rs  weather_db.rs  wikipedia.rs  wolfram_alpha.rs
