[package]
name = "tbotti"
version = "0.1.0"
authors = ["Tero Lehtonen <terol@kapsi.fi>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.15"
futures = "0.3"
tokio = { version = "1.14", features = ["full"] }
regex = "1.5"
lazy_static = "1.4"
chrono = "0.4"
reqwest = "0.11"
select = "0.5"
http = "0.2"
serde_json = "1.0"
rusqlite = "0.25"
feed-rs = "1.0" 
url = "2.2"
xmltree = "0.10"
rand = "0.8"
log = "0.4"
env_logger = "0.9"
yaml-rust = "0.4"
ts3-query = "0.3.1"
